@@ -70,7 +70,7 @@ quest.bork_blockade.ships=7
 
 quest.rogues_beacon.price=3
 
-quest.damaged_rogue_scout.chance=0.05
+quest.damaged_rogue_scout.chance=0.1
 quest.damaged_rogue_scout.boom_chance=0.2
 quest.damaged_rogue_scout.reward=5
 quest.damaged_rogue_scout.max_days=300
@@ -103,7 +103,7 @@ quest.inside.cell_damage=1
 quest.inside.planets=60
 quest.inside.planets_to_destroy=4
 
-quest.red_meat.chance=10.01
+quest.red_meat.chance=0.03
 quest.red_meat.minDist=25
 
 encounter.bork_pirates.count=3
