@@ -249,3 +249,6 @@ trade.title=Trade
 trade.sell=Sell
 trade.buy=Buy
 trade.merchant=Merchant
+
+attack_friendly.title=Attack confirmation
+attack_friendly.text=This ship is not hostile. Are you sure you want to attack it?
